# split-or-steal

./: Anchor.toml  README.md
app/.next/dev/types/: routes.d.ts  validator.ts
app/src/: middleware.ts
app/src/app/: layout.tsx  lobby.module.css  page.tsx
app/src/app/admin/: admin.module.css  page.tsx
app/src/app/admin/login/: page.tsx
app/src/app/api/admin/create-game/: route.ts
app/src/app/api/admin/login/: route.ts
app/src/app/api/admin/resolve-game/: route.ts
app/src/app/api/game/commit/: route.ts
app/src/app/api/game/join/: route.ts
app/src/app/api/game/reveal/: route.ts
app/src/app/game/[id]/: game.module.css  page.tsx
app/src/components/: GameCard.tsx
app/src/hooks/: useGame.ts
app/src/lib/: constants.ts  idl.ts  serverUtils.ts
app/src/providers/: WalletProvider.tsx
programs/split_or_steal/: Cargo.toml
programs/split_or_steal/src/: constants.rs  error.rs  lib.rs
programs/split_or_steal/src/instructions/: commit_choice.rs  create_game.rs  join_game.rs  mod.rs  resolve_game.rs  reveal_choice.rs
programs/split_or_steal/src/state/: mod.rs
tests/: contract.ts
