[package]
name = "split_or_steal"
version = "0.1.0"
description = "Split or Steal — a 2-player Solana game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "split_or_steal"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
sha2 = { version = "0.10", default-features = false }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
